Updated page template.

--- a/www/interior-decorator-training-course-1day.htm
+++ b/www/interior-decorator-training-course-1day.htm
@@ -53,41 +53,43 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --></td>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
@@ -201,41 +203,43 @@ email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorre
             </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem -->            <div align="left"><a class="footer" href="#top">Return to top of page</a></div>
           </td>
         </tr>
       </table></td>
