--- a/www/real-estate-staging-intensive.htm
+++ b/www/real-estate-staging-intensive.htm
@@ -53,48 +53,50 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --></td>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1>Real Estate Staging Intensive</h1>
-          <p class="course-description">A 2-1/2 day Real Estate Staging Training<br />(home staging training) Workshop</p>
+          <p class="course-description">A 3 day Real Estate Staging Training<br />(home staging training) Workshop</p>
           <p>Looking to start a business in home staging? Then this <strong>Certificate program</strong> in <strong>real estate staging</strong> (also called <strong>home staging</strong>), which has been <strong>approved by the Commissioner of Higher Education for the State of Connecticut</strong>, is just what you need!</p>
-          <p>During this 2-1/2 day real estate staging training (home staging training) program you will learn how to help your clients prepare their homes to sell quickly and for top dollar.</p>
+          <p>During this 3 day real estate staging training (home staging training) program you will learn how to help your clients prepare their homes to sell quickly and for top dollar.</p>
           <p>To do this, we will discuss the following:</p>
           <ul>
             <li><img src="images/staging_bathrm.jpg" width="215" height="166" align="right" />The philosophy of real estate staging </li>
@@ -105,7 +107,7 @@
           </ul>
           <p>In addition to the specific information on preparing a home for sale, we will discuss the business aspect of real estate staging, including:</p>
           <ul>
-            <li> How to attract customers </li>
+            <li>How to attract customers </li>
             <li>Maintaining client relationships </li>
             <li>Specific marketing tools to use to open doors </li>
             <li>Steps to take to begin your business and move it forward in the coming years.</li>
@@ -119,9 +121,9 @@
           </ul>
           <p><strong><em>Click here for <a href="questions-interior-redesign-staging-training.htm">answers to frequently asked questions</a> and for more information on what you should know about training and certification.</em></strong></p>
           <h2>Enroll in the Real Estate Staging Intensive Class</h2>
-          <p>The 2-1/2 day Real Estate Staging Intensive can be taken in 2-1/2 back-to-back days or one day at a time, depending on your needs. The cost for this intensive 2-1/2 day real estate staging training (home staging training) workshop is $1,250, which includes all of the above, as well as lunch, and beverages and snacks each day.&nbsp;If you prefer to take the training at different times, you must still take the days in order. Please check our <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign for more information. The cost for taking each day individually is $500 for days 1 and 2 and $250 for day 3.</p>
+          <p>The cost for this intensive 3 day real estate staging training (home staging training) workshop is $1,500, which includes all of the above, as well as lunch, and beverages and snacks each day. Please check our <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign for more information.</p>
           <p>To see the schedule of real estate staging training (home staging training), check the <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
-          <p>To reserve your space in a real estate staging training (home staging training) class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $300</a>. The balance is due two weeks prior to the start of class.&nbsp;One day classes must be paid in full at the time of enrollment.</p>
+          <p>To reserve your space in a real estate staging training (home staging training) class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.&nbsp;One day classes must be paid in full at the time of enrollment.</p>
           <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
           <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
           <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
@@ -142,41 +144,43 @@ email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorre
             </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem -->            <div align="left"><a class="footer" href="#top">Return to top of page</a></div>
           </td>
         </tr>
       </table></td>
