--- a/www/real-estate-staging.htm
+++ b/www/real-estate-staging.htm
@@ -53,74 +53,63 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --></td>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1 align="center"> Real Estate Staging Classes</h1>
           <!-- real estate staging training and home staging training -->
-<p><!-- real estate staging training and home staging training --><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While
-            the five-day <a href="interior-redesign-staging.htm">Interior
-              Redesign/Real Estate Staging Intensive Workshop</a> includes
-              real estate staging training (home staging training), <strong>if
-              you are interested strictly in real estate
-              staging</strong> <strong>as a business</strong>, check out the
-              home staging workshops below:</p>
+          <p><!-- real estate staging training and home staging training --><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While the five-day <a href="interior-redesign-staging.htm">Interior Redesign/Real Estate Staging Intensive Workshop</a> includes real estate staging training (home staging training), <strong>if you are interested strictly in real estate staging as a business</strong>, check out the home staging workshops below:</p>
           <h2>Real Estate Staging Intensive Training </h2>
           <p>The  <a href="real-estate-staging-intensive.htm">Real Estate Staging
                 Intensive Workshop</a> is a Certificate home staging training
                 program designed
                 <strong>for those interested in starting a business
                 in real estate staging</strong>.
-                This is 2-1/2 days of intensive real estate staging training,
+                This is 3 days of intensive real estate staging training,
             including hands-on home staging experience. </p>
           <h2>Real Estate Staging for the Professional </h2><!-- real estate staging training and home staging training -->
-          <p><a href="real-estate-staging-professional.htm">Real Estate
-              Staging for the Professional</a> offers you a choice of
-              either one day of real estate staging training (home staging training)
-              in the classroom - or two days, which includes marketing and hands-on
-              home staging. These workshops are designed <strong>for anyone wanting
-              to incorporate </strong><strong>real
-              estate staging</strong><strong> (home staging) into their repertoire
-              of services</strong>.&nbsp; And it's perfect for real estate professionals! </p>
+          <p><a href="real-estate-staging-professional.htm">Real Estate Staging for the Professional</a> offers you 2 days of classroom learning and hands-on experience. If you would like to add marketing, you can add another 1/2 day. These workshops are designed <strong>for anyone wanting to incorporate real estate staging (home staging) into their repertoire of services</strong>. And it's perfect for real estate professionals!</p>
               <h2>Real Estate Staging Home Study</h2>
 			<p>The <a href="assets/sir-real-estate-staging.pdf" target="_blank">Real Estate Staging Home Study program</a> takes you through the entire process of preparing homes for sale, from the staging consultation, all the way to working with sellers as they make major (or minor) changes to their property to increase its value and decrease the amount of time it takes to sell. You will learn <strong>what to do, how to do it, as well as when to stop</strong>. Broken into modules for ease of learning, the <strong>comprehensive manual and accompanying workbook</strong> provide all of the information and exercises needed to ensure your complete and thorough understanding of real estate staging.</p>
           <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                  here for the questions you should ask ...and </strong></em><br />
+                  here for the questions you should ask...and </strong></em><br />
               <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
           <!-- InstanceEndEditable --></td>
         </tr>
@@ -138,41 +127,43 @@
             </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem -->            <div align="left"><a class="footer" href="#top">Return to top of page</a></div>
           </td>
         </tr>
       </table></td>
