--- a/www/staff-redesign-staging-school.htm
+++ b/www/staff-redesign-staging-school.htm
@@ -53,45 +53,47 @@
           <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
         </tr>
         <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --></td>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem --></td>
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1 align="center"> Meet the Director</h1>
+            <h1 align="center">Meet the Instructors</h1>
             <h2 align="left">Ann Anderson</h2>
             <p><img src="images/ann-anderson-headshot.jpg" alt="Ann Anderson, a Certified Interior Redesign Specialist and owner of Rooms Reborn, is the founder and Director of the School of Interior Redesign and eminently qualified and experienced in the fields of interior decorating, redecorating, redesign, real estate staging, and home staging." width="144" height="200" hspace="12" vspace="4" border="1" align="right" />As founder and Director of the School of Interior Redesign, Ann has taken her twenty years' experience in the corporate world as a trainer and professional speaker and combined them with her experience as owner of <a href="http://www.roomsreborn.com" target="_blank">Rooms Reborn </a>to create programs to help you succeed in your own design-related business.</p>
 			<p>Ann has worked closely with the Connecticut Department of Higher Education to ensure the training offered by the School of Interior Redesign meets their exacting standards of quality education at its best.</p>
@@ -99,14 +101,13 @@
             <table width="460" border="0" align="center" cellpadding="4" cellspacing="0">
               <tr>
                 <td align="center" valign="middle"><img src="images/logo_ADE_sm.jpg" width="77" height="50" vspace="8" /></td>
-                <td align="left" valign="middle">Ann is an Approved Trainer with the <a href="http://www.associationofdesigneducation.com" target="_blank">Association of Design Education</a>. </td>
-              </tr>
-              <tr>
-                <td align="center" valign="middle"><img src="images/logo_ids_sm.jpg" width="68" height="50" hspace="8" vspace="8" align="bottom" /></td>
-                <td align="left" valign="middle">Ann is also a long-time member of IDS, <a href="http://www.interiordesignsociety.org/" target="_blank">The Interior Design Society</a>. </td>
+                <td align="left" valign="middle">Ann is an Approved Trainer with the <a href="http://www.associationofdesigneducation.com" target="_blank">Association of Design Education</a>.</td>
               </tr>
             </table>
             <p align="center">To contact Ann directly, email <a href="mailto:ann@schoolofinteriorredesign.com">ann@schoolofinteriorredesign.com </a></p>
+			  <h2>Claudia Tergis</h2>
+			  <p><img src="images/claudia-tergis.jpg" alt="Claudia Tergis" hspace="12" vspace="4" border="1" align="right"/>As an Instructor of the School of Interior Redesign staging courses, Claudia brings her background of over 15 years as a Realtor in Southern Fairfield County as well as her knowledge of and passion for home staging to her classes. She is a graduate of the School of Interior Redesign and over the years has worked with and learned from several of Connecticut’s premier stagers. She is currently Executive Vice President of Home Staging &amp; Real Estate for Chilton &amp; Chadwick, a high-end boutique style real estate staging team in Greenwich, CT.</p>
+			  <p>Claudia’s interest in the design and fashion industries, with their bold colors, innovative designs, and beautiful fabrics sparks her creativity and enthusiasm for the staging industry. She has also lived in three countries, and has studied anthropology, language, and cultures which makes her classes lively, interesting, and information-packed.</p>
                 <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
@@ -123,41 +124,43 @@
             </td>
         </tr>
         <tr>
-          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
-          	<li><a href="index.htm">Home Page</a></li>
-            <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
-            <li><span class="node">Classes</span> 
-            	<ul>
-					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
-                    	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
-                    	<ul>
-                        	<li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
-                            <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
-                    	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
-                        </ul>
-                    </li>
+          <td colspan="4" class="footer"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" -->
+            <ul class="navbar">
+              <li><a href="index.htm">Home Page</a></li>
+              <li><a href="questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>
+              <li><span class="node">Classes</span>
+                <ul>
+                  <li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
+                    <ul>
+                      <li><a href="interior-redesign-intro.htm">Introduction to Redesign</a></li>
+                      <li><a href="interior-redesign-professional.htm">Redesign for the Professional</a></li>
+                      <li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <ul>
+                      <li><a href="real-estate-staging-professional.htm">Staging for the Professional</a></li>
+                      <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <ul>
+                      <li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                      <li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
-            <li><a href="course-schedule.htm">Class Schedule</a></li>
-            <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
-            <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
-            <li><a href="payment.htm">Secure Online Payment</a></li>
-            <li><a href="staff-redesign-staging-school.htm">Meet The Director</a></li>
-            <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
-            <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
+              </li>
+              <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+              <li><a href="course-schedule.htm">Class Schedule</a></li>
+              <li><a href="directions-school-redesign-staging.htm">Directions To The School</a></li>
+              <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
+              <li><a href="payment.htm">Secure Online Payment</a></li>
+              <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
+              <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
+              <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
+            </ul>
+          <!-- #EndLibraryItem -->            <div align="left"><a class="footer" href="#top">Return to top of page</a></div>
           </td>
         </tr>
       </table></td>
